# gpt-oss-safeguard-testing

./: .coverage  ATTACK_SCENARIO_INTEGRATION_COMPLETE.md  ATTACK_SCENARIO_TESTING_RESULTS.md  ATTACK_TESTING_SUMMARY.md  CLI_UNIFICATION.md  CONSOLIDATION_SUMMARY.md  DATASET_FIXES_APPLIED.md  DATASET_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  LOG_QUERIES.md  MULTI_CATEGORY_LOG_MERGER_VERIFIED.md  QUICK_START_TESTING.md  README.md  README_ATTACK_TESTING.md  SECURITY_TESTING_ADDITIONS.md  TESTING_IMPROVEMENTS_SUMMARY.md  TEST_SUITE_SUMMARY.md  enhancement_log.txt  explore_hate_speech_dataset.ipynb  explore_sexual_content_dataset.ipynb  explore_violence_dataset.ipynb  explore_wildjailbreak.ipynb  main.py  pyproject.toml  sexual_content_schema.json  test_safeguard.py  test_safeguard.py.backup  update_test_names.py  view_logs.py  violence_schema.json  wildjailbreak_schema.json
Feedback/: Before-After-Code-Examples.md  Card-Component-Usage-Analysis.md  Quick-Reference-Card-Patterns.md  README.md  Visual-Spacing-Diagrams.md
docs/: ATTACK_VECTOR_TESTING.md  attack-metrics-guide.md  cookbook.md  unicode-category-overview.md
logs.v1/: multi_turn_20251102_130227.jsonl  multi_turn_attacks_20251102_124743.jsonl  over_refusal_20251102_130430.jsonl  prompt_injection_20251102_130317.jsonl  prompt_injection_20251102_130327.jsonl  safeguard_debug_20251101_232047.jsonl  safeguard_debug_20251101_232109.jsonl  safeguard_debug_violence_20251102_102145.jsonl  safeguard_test_20251101_230833.jsonl  safeguard_test_20251101_232047.jsonl  safeguard_test_20251101_232109.jsonl  (+20 more)
tests/: README.md  (+3 more)
(+330 files in other folders)
