[project]
name = "gpt-oss-safeguard-testing"
version = "0.1.0"
description = "Testing framework for GPT-OSS-Safeguard model policy compliance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "click>=8.1.0",
]

[project.scripts]
safeguard-test = "main:cli"

[tool.setuptools]
py-modules = ["main", "test_safeguard", "view_logs"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]
